k8s/backend.yaml
# Deployment ของ backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app-authen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: docker.io/wasu1304/backend:10d4a8b
          # image: docker.io/wasu1304/backend:10d4a8b
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
---
# Service ของ backend
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: app-authen
spec:
  selector:
    app: backend
  ports:
    - port: 3000
      targetPort: 3000
