k8s/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: app-authen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          emptyDir: {}   # สำหรับ dev/test ใช้ emptyDir, production ใช้ PVC
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: app-authen
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
